[package]
name = "bencher_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = ["plus"]
plus = [
    "bencher_client/plus",
    "bencher_comment/plus",
    "bencher_json/plus"
]

[build-dependencies]
bencher_context = { workspace = true, features = ["client"] }

[dependencies]
# Workspace
bencher_adapter.workspace = true
bencher_client.workspace = true
bencher_comment.workspace = true
bencher_json = { workspace = true, features = ["client", "table"] }
camino.workspace = true
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["env"] }
literally.workspace = true
octocrab.workspace = true
progenitor-client.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt", "signal"] }
tokio-rustls.workspace = true
url.workspace = true
# Crate
bollard = "0.18"
futures-util = "0.3"
gix = { version = "0.70", default-features = false, features = ["revision"] }
http.workspace = true
hyper-http-proxy = "1.0.0"
hyper-util = { version = "0.1.10", features = ["client-legacy", "http1", "http2", "tokio"] }

[lints]
workspace = true

[[bin]]
name = "bencher"
path = "src/main.rs"
